DiffernecesOfSummaries/nohup.out
Exception in thread "DisconnectableInputStream source reader" org.gradle.api.UncheckedIOException: java.io.IOException: Bad file descriptor
	at org.gradle.internal.UncheckedException.throwAsUncheckedException(UncheckedException.java:61)
	at org.gradle.internal.UncheckedException.throwAsUncheckedException(UncheckedException.java:41)
	at org.gradle.util.internal.DisconnectableInputStream$1.run(DisconnectableInputStream.java:127)
	at java.base/java.lang.Thread.run(Thread.java:829)
Caused by: java.io.IOException: Bad file descriptor
	at java.base/java.io.FileInputStream.readBytes(Native Method)
	at java.base/java.io.FileInputStream.read(FileInputStream.java:279)
	at java.base/java.io.BufferedInputStream.read1(BufferedInputStream.java:290)
	at java.base/java.io.BufferedInputStream.read(BufferedInputStream.java:351)
	at org.gradle.util.internal.DisconnectableInputStream$1.run(DisconnectableInputStream.java:98)
	... 1 more

> Task :compileJava FAILED
/media/nvme7n1/jmuecke/TemporalGraphDifferences/DiffernecesOfSummaries/src/main/java/exec/Main.java:42: error: cannot find symbol
        return new BinaryMetric[]{new EdgeJaccard(), new VertexJaccard(), new GED(), new KLD()};
                                      ^
  symbol:   class EdgeJaccard
  location: class Main
/media/nvme7n1/jmuecke/TemporalGraphDifferences/DiffernecesOfSummaries/src/main/java/exec/Main.java:42: error: cannot find symbol
        return new BinaryMetric[]{new EdgeJaccard(), new VertexJaccard(), new GED(), new KLD()};
                                                         ^
  symbol:   class VertexJaccard
  location: class Main
/media/nvme7n1/jmuecke/TemporalGraphDifferences/DiffernecesOfSummaries/src/main/java/exec/Main.java:42: error: cannot find symbol
        return new BinaryMetric[]{new EdgeJaccard(), new VertexJaccard(), new GED(), new KLD()};
                                                                              ^
  symbol:   class GED
  location: class Main
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 785ms
1 actionable task: 1 executed
